more changes server edition
